--- a/configs/paths/default.yaml
+++ b/configs/paths/default.yaml
@@ -2,5 +2,7 @@ logdir: data/logs # directory for training logs and checkpoints
 
 celeba_data_dir: data/datasets/celeba
 aflw_data_dir: data/datasets/aflw_release-2
+exercise_data_dir: data/datasets/exercise_dataset
+deepfashion_data_dir: data/datasets/deepfashion
 
 vgg16_path: data/models/vgg16.caffemodel.h5 # path to pretrained VGG16 for perceptual loss
